Fix footer gap. Large README update. Repo sync 3/23/25

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -21,6 +21,16 @@
   color: var(--color-blue);
 }
 
+.github-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & a {
+    color: var(--color-blue);
+  }
+}
+
 .grid-popup-wrapper,
 .alphabet-popup-wrapper {
   position: absolute;
